# langchain-bd

./: .gitignore  README.md  env.template  example_pandas_agent_usage.py  langgraph.json  pyproject.toml  quick_test_blockchain_tools.py  requirements.txt  simple_test.py  synthesis_input.md  test_blockchain_tools_standalone.py  test_growthepie_cache_tool.py  test_rename.py
src/: main_workflow.py
src/agents/: blockchain_revenue_agent.py  growthepie_analysis_agent.py  project_manager.py  strategic_editor_agent.py  xai_agent.py
src/data/: arbitrum_updates.txt  base_updates.txt  mantle_updates.txt
src/data/growthepie_cache/: mantle_7d_14Julto20Jul.csv  mantle_7d_21Julto27Jul.csv
src/data/gtp_contracts/: mantle_7d_1_defi_contracts.csv  mantle_7d_1_social_contracts.csv  mantle_7d_2_defi_contracts.csv  mantle_7d_2_social_contracts.csv
src/schemas/: metadata_fields.jsonl  reports.yaml  state.py
src/tools/: blockchain_tools.py  category_perc.py  gtp_tools.py  top_contracts_by_gas_fees.py
src/utils/: agent_utils.py
tests/: Untitled.ipynb  blockchaintools.ipynb  test_blockchain_tools.py
